# A1_comp_esc

./: README.md  ecommerce.db  etl_times.txt  gera_json_pedidos.py  project-plan.md  pyproject.toml  relatorio_final.docx
framework/: compare_performance.py  concurrent_pipeline.py  create_database.py  dataframe.py  handler_print_top5.py  handler_top_5_produtos.py  handlers.py  handlers_processar_novos_pedidos.py  handlers_worker_pools_buffer.py  pedidos_handler.py  usage_concurrent_pipeline.py
gRPC/: client.py  data_messages.db  demo.proto  demo_pb2.py  demo_pb2_grpc.py  server.py  test_db.py
gRPC/database/: ecommerce.db  ecommerce_db.py
mock/: gera_csv_pedidos.py  gera_json_pedidos.py  populate_db.py
new/: ETL.py  benchmark_utils.py  dashboard.py  data_generators.py  database.py  dataframe.py  handler.py  hybrid_pool.py  loaders.py  metrics.py  miniframework.py  mvp_pipeline.py  orders_ingest.py  pedidos_handler.py  populate_ecommerce_db.py  scheduler.py  trial.ipynb  triggers.py  using_threads.py  worker.py
new/source/: run_benchmark_trial.py
new/source/dashboard/: dashboard.py
new/source/etl/: ETL.py  ETL_new.py  ETL_utils.py  config.py  data_generators.py  data_setup.py  database.py  etl_types.py  etl_workers.py  my_etl_db  orders_ingest.py  pedidos_handler.py  populate_ecommerce_db.py  run_etl.py
new/source/framework/: handler.py  (+6 more)
old/framework/: compare_performance.py  create_database.py  handlers.py  pedidos_handler.py
old/mock/: gera_json_pedidos.py  populate_db.py
trial_gRPC/: client.py  demo.proto  demo_pb2.py  demo_pb2_grpc.py  server.py
(+15 files in other folders)
